tests/code_samples/valid/valid.t
(S0, 1):  (1 R halt)
(S0, 0):  (1 R S1) 

(S1, 0):  (1 S S0)
(S1, 1):  (1 S S0)
