tests/code_samples/invalid/left_miss.t
(S0, 1):  (1 R halt)